fixed collapse menu

--- a/public/materialize/css/materialize.css
+++ b/public/materialize/css/materialize.css
@@ -7134,7 +7134,7 @@ input[type=range]:focus::-ms-fill-upper {
   color: #fff;
 }
 
-#sidenav-overlay {
+/*#sidenav-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -7143,7 +7143,7 @@ input[type=range]:focus::-ms-fill-upper {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 997;
   will-change: opacity;
-}
+}*/
 
 /*
     @license
